force-app/main/default/objects/Zco_Eligibility_Rule__mdt/Zco_Eligibility_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Zco Eligibility Rule</label>
    <pluralLabel>Zco Eligibility Rules</pluralLabel>
</CustomObject>