force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Field_API__c.field-meta.xml
<CustomField>
<fullName>Field_API__c</fullName>
<label>Field API</label>
<type>Text</type>
<required>true</required>
<length>255</length>
</CustomField>