force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Guardrail_Id__c.field-meta.xml
<CustomField>
<fullName>Guardrail_Id__c</fullName>
<label>Guardrail Id</label>
<type>Text</type>
<length>255</length>
</CustomField>