force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Holding_Template_Key__c.field-meta.xml
<CustomField>
<fullName>Holding_Template_Key__c</fullName>
<label>Holding Template Key</label>
<type>Text</type>
<length>255</length>
</CustomField>