force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>ageUnder</fullName>
            </value>
            <value>
                <fullName>bandAtLeast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>