force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor review</fullName>
            </value>
            <value>
                <fullName>Not suitable</fullName>
            </value>
            <value>
                <fullName>Priority call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>