force-app/main/default/objects/Zco_Eligibility_Rule__mdt/fields/Value__c.field-meta.xml
<CustomField>
<fullName>Value__c</fullName>
<label>Value</label>
<type>Text</type>
<length>255</length>
</CustomField>